--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ page_assets: /assets/images/landpage/
       <div style="float:right;margin-bottom:2rem;">
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
-          <img style="height:60pt;"  src="/assets/images/landpage/button.png" />
+          <img style="height:100px;"  src="/assets/images/landpage/button.png" />
         </a>
       </div>
       <div style="clear:both;">
