--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ page_assets: /assets/images/landpage/
             {% for featured in item.featured %}
               <div style="text-align:center;background-color:#282828;padding:0.7rem;margin:0.3rem;width:8rem;height:4rem;float:left;">
                 <p style="color:#eaeaea;font-size:0.7rem;padding:0;">
-                <img style="display:block;margin-left:auto;margin-right:auto;" src="/assets/images/landpage/sep-light.svg" /><br>
+                <img style=height:2rem;display:block;margin-left:auto;margin-right:auto;" src="/assets/images/landpage/sep-light.svg" /><br>
                 <a href="{{featured.url}}">{{featured.text}}</a>
                 </p>
               </div>
@@ -55,6 +55,9 @@ page_assets: /assets/images/landpage/
           {% endif %}
         </div>
       {% endif %}
+
+      <div style="clear:both;" />
+
 
       <div style="float:right;margin-bottom:2rem;">
         <a href="{{ item.url }}" >
@@ -65,6 +68,7 @@ page_assets: /assets/images/landpage/
       <div style="clear:both;">
       </div>
 
+      <div style="clear:both;" />
 
 
     {% endfor %}
