--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@ page_assets: /assets/images/landpage/
       {% if item.description or item.featured %}
         <div style="padding:0.3rem;margin-bottom:1rem;">
           {% if item.description %}
-            <p style="color:#eaeaea;font-size:1rem;padding:0;">{{item.description}}</p>
+            <div style="text-align:center;background-color:#282828;padding:0.7rem;margin:0.3rem;width:8rem;height:4rem;float:left;">
+              <p style="color:#eaeaea;font-size:1rem;padding:0;">{{item.description}}</p>
+            </div>
+
           {% endif %}
           {% if item.featured and item.featured.size > 0 %}
             {% for featured in item.featured %}
@@ -56,20 +59,18 @@ page_assets: /assets/images/landpage/
         </div>
       {% endif %}
 
-      <div style="clear:both;" />
 
 
-      <div style="float:right;margin-bottom:2rem;">
+      <div style="text-align:center;background-color:#282828;padding:0.7rem;margin:0.3rem;width:8rem;height:4rem;float:left;">
+      <!--<div style="float:right;margin-bottom:2rem;">-->
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
           <img style="height:50px;"  src="/assets/images/landpage/button.png" />
         </a>
       </div>
+
       <div style="clear:both;">
       </div>
-
-      <div style="clear:both;" />
-
 
     {% endfor %}
   </div>
