--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ page_assets: /assets/images/landpage/
     {% for item in site.data.navigation.landpage %}
       {% if item.titleImage %}
         <div style="text-align:center;padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
-          <img style="height:{{item.titleHeight}}px;"  src="/assets/images/landpage/{{item.titleImage}}" />
+          <img style="height:{{item.titleHeight}}px;vertical-align:middle;display:inline-block;"
+               src="/assets/images/landpage/{{item.titleImage}}" />
         </div>
       {% else %}
         <header><h2>{{item.title}}</h2></header>
@@ -65,7 +66,8 @@ page_assets: /assets/images/landpage/
       <!--<div style="float:right;margin-bottom:2rem;">-->
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
-          <img style="height:50px;"  src="/assets/images/landpage/button.png" />
+          <img style="height:50px;vertical-align:middle;display:inline-block;"
+               src="/assets/images/landpage/button.png" />
         </a>
       </div>
 
