--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ page_assets: /assets/images/landpage/
   <div>
     {% for item in site.data.navigation.landpage %}
       {% if item.titleImage %}
-        <div style="text-align:center;padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
+        <div style="padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;vertical-align:middle;">
           <img style="height:{{item.titleHeight}}px;"
                src="/assets/images/landpage/{{item.titleImage}}" />
         </div>
