--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ page_assets: /assets/images/landpage/
 
 
 
-      <div style="text-align:center;background-color:#282828;padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
+      <div style="background-color:#282828;"padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
       <!--<div style="float:right;margin-bottom:2rem;">-->
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
-          <img style="height:50px;"
+          <img style="height:40px;vertical-align:middle;"
                src="/assets/images/landpage/button.png" />
         </a>
       </div>
