--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ page_assets: /assets/images/landpage/
 
 
 
-      <div style="background-color:#282828;"padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
+      <div style="background-color:#282828;padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
       <!--<div style="float:right;margin-bottom:2rem;">-->
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
