--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ page_assets: /assets/images/landpage/
   <div>
     {% for item in site.data.navigation.landpage %}
       {% if item.titleImage %}
-        <div style="padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;vertical-align:middle;">
+        <div style="margin:0.3rem;width:8rem;height:8rem;float:left;">
           <img style="height:{{item.titleHeight}}px;"
                src="/assets/images/landpage/{{item.titleImage}}" />
         </div>
@@ -62,11 +62,11 @@ page_assets: /assets/images/landpage/
 
 
 
-      <div style="background-color:#282828;padding:0.7rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
+      <div style="padding-top:5rem;margin:0.3rem;width:8rem;height:8rem;float:left;">
       <!--<div style="float:right;margin-bottom:2rem;">-->
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
-          <img style="height:40px;vertical-align:middle;"
+          <img style="height:40px;"
                src="/assets/images/landpage/button.png" />
         </a>
       </div>
