--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@ page_assets: /assets/images/landpage/
             {% for featured in item.featured %}
               <div class="bdc_box_item">
                 <p style="color:#eaeaea;font-size:0.7rem;padding:0;">
-                  <img src="/assets/images/landpage/sep-light.svg" /><br>
-                  <!--style="height:1rem;display:block;margin-left:auto;margin-right:auto;"-->
-
+                  <img style="height:1rem;display:block;margin-left:auto;margin-right:auto;"
+                      src="/assets/images/landpage/sep-light.svg" /><br>
                   <a href="{{featured.url}}">{{featured.text}}</a>
                 </p>
               </div>
