--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ page_assets: /assets/images/landpage/
         </a>
       </div>
 
+      <div class="bdc_box_push">
+      </div>
+
     </div>
     {% endfor %}
 
