--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ page_assets: /assets/images/landpage/
   </div>
 
     {% for item in site.data.navigation.landpage %}
-    <div class="bdc_box">
+    <div style="display: flex;flex-flow: row wrap;flex-basis: 10px;justify-content: start;align-items: center;">
       {% if item.titleImage %}
-        <div class="bdc_box_head">
+      <div style="flex: 1 1 10px;padding:0.7rem;margin:0.3rem;">
           <img style="height:{{item.titleHeight}}px;"
                src="/assets/images/landpage/{{item.titleImage}}" />
         </div>
@@ -43,15 +43,14 @@ page_assets: /assets/images/landpage/
 
       {% if item.description or item.featured %}
           {% if item.description %}
-            <div class="bdc_box_item">
+            <div style="flex: 1 1 10px;text-align: center;word-wrap: break-word;overflow-wrap: break-word;background-color:#282828;padding:0.7rem;margin:0.3rem;">
               <p style="color:#eaeaea;font-size:0.7rem;padding:0;">{{item.description}}</p>
             </div>
 
           {% endif %}
           {% if item.featured and item.featured.size > 0 %}
             {% for featured in item.featured %}
-            <div class="bdc_box_item">
-
+            <div style="flex: 1 1 10px;text-align: center;word-wrap: break-word;overflow-wrap: break-word;background-color:#282828;padding:0.7rem;margin:0.3rem;">
 
                   <p style="color:#eaeaea;font-size:0.7rem;padding:0;">
                     <img style="height:1rem;display:block;margin-left:auto;margin-right:auto;"
@@ -59,7 +58,6 @@ page_assets: /assets/images/landpage/
                     <a href="{{featured.url}}">{{featured.text}}</a>
                   </p>
 
-                
               </div>
             {% endfor %}
           {% endif %}
@@ -67,7 +65,7 @@ page_assets: /assets/images/landpage/
 
 
 
-      <div class="bdc_box_tail">
+      <div style="flex: 1 1 10px;padding:0.7rem;margin:0.3rem;">
       <!--<div style="float:right;margin-bottom:2rem;">-->
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
@@ -76,7 +74,7 @@ page_assets: /assets/images/landpage/
         </a>
       </div>
 
-      <div class="bdc_box_push">
+      <div style="flex: 1 1 10px;margin-left: auto;">
       </div>
 
     </div>
