--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ page_assets: /assets/images/landpage/
               <div style="width:150px;">
 
                   <p style="color:#eaeaea;font-size:0.7rem;padding:0;">
-                    {% if item.featured.thumbnail %}
+                    {% if featured.thumbnail %}
                       <img style="height:1rem;display:block;margin-left:auto;margin-right:auto;"
                           src="{{featured.thumbnail}}" />
                     {% else %}
