--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ page_assets: /assets/images/landpage/
     <div style="display: flex;flex-flow: row wrap;flex-basis: 10px;justify-content: start;align-items: center;">
 
       {% for featured in item.featured %}
-        <div style="width:25%;">
+        <div style="width:150px;">
           {% if featured.thumbnail %}
-            <img style="height:5rem;display:block;margin-left:auto;margin-right:auto;"
+            <img style="width:150px;display:block;margin-left:auto;margin-right:auto;"
                           src="{{featured.thumbnail}}" />
           {% else %}
             <img style="height:1rem;display:block;margin-left:auto;margin-right:auto;"
@@ -50,7 +50,7 @@ page_assets: /assets/images/landpage/
         <div style="width:5%;">
         </div>
 
-        <div style="width:50%px;">
+        <div style="width:auto;">
           <p style="color:#eaeaea;font-size:0.7rem;padding:0;">
             <a href="{{featured.url}}">{{featured.text}}</a>
           </p>
@@ -59,10 +59,10 @@ page_assets: /assets/images/landpage/
         <div style="width:5%;">
         </div>
 
-        <div style="width:15%;">
+        <div style="width:50px;">
           <a href="{{ featured.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
-            <img style="height:30px;width:auto;"
+            <img style="width:50px;width:auto;"
                  src="/assets/images/landpage/button.png" />
           </a>
         </div>
